@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.3.4.RELEASE'
+        springBootVersion = '2.4.4'
     }
     dependencies {
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.0.1622"
@@ -10,7 +10,7 @@ buildscript {
 
 plugins {
     id 'application'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'se.patrikerdes.use-latest-versions' version '0.2.7'
     id 'com.github.ben-manes.versions' version '0.20.0'
     id 'org.sonarqube' version '2.7'
@@ -19,10 +19,9 @@ plugins {
     id 'io.franzbecker.gradle-lombok' version '2.0'
     id 'net.ltgt.apt' version '0.21'
     id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
-    id "info.solidsoft.pitest" version '1.4.0' apply(false)
+    id "info.solidsoft.pitest" version '1.5.1' apply(false)
     id "org.jetbrains.gradle.plugin.idea-ext" version "0.7"
     id 'uk.gov.hmcts.java' version '0.12.0'
-    id 'org.flywaydb.flyway' version '7.0.0'
 }
 
 apply plugin: 'java'
@@ -42,34 +41,35 @@ dependencyCheck {
     suppressionFile = 'dependency-check-suppressions.xml'
 
     // Ignore these non-runtime configurations
-   skipConfigurations = ['codacy']
+    skipConfigurations = ['codacy']
 }
 
 //spring boot dependency override
 //overriding some default spring boot deps because too old. Not generally recommended but needed to prevent runtime errors with version 6.4.2 of Elastic
-ext['elasticsearch.version'] = '6.4.3'
+ext['elasticsearch.version'] = '6.8.17'
 ext['javax-validation.version'] = '2.0.1.Final'
-ext['hibernate-validator.version'] = '6.0.10.Final'
-ext['spring-security.version'] = '5.3.8.RELEASE'
+ext['hibernate-validator.version'] = '6.0.20.Final'
+ext['spring-security.version'] = '5.4.5'
 ext['jackson.version'] = '2.10.3'
 ext['snakeyaml.version'] = '1.26'
 ext['postgresql.version'] = '42.2.16'
-ext['oauth2-oidc-sdk.version'] = '8.22'
 //overriding log4j2 default version 2.7 because of vulnerability issues
 ext['log4j2.version'] = '2.13.2'
+ext['spring-framework.version'] = '5.3.7'
+
 // end
 
 ext {
-    junitJupiterVersion = '5.5.2'
-    junitVintageVersion = '5.5.2'
-    springCloudVersion = 'Hoxton.RELEASE'
+    junitJupiterVersion = '5.7.0'
+    junitVintageVersion = '5.7.0'
+    springCloudVersion = '2020.0.1'
     springfoxSwaggerVersion = '3.0.0'
     hamcrestVersion = '1.3'
     powermockVersion = '2.0.0-beta.5'
     reformLogging= '5.1.1-BETA'
     restAssuredVersion = '4.3.0!!'
     groovyVersion = '3.0.2!!'
-    tomcatVersion = '9.0.43!!'
+    tomcatVersion = '9.0.50!!'
     hibernateVersion = '5.4.24.Final!!'
     limits = [
             'instruction': 99,
@@ -104,12 +104,16 @@ allprojects {
     apply plugin: 'java'
 
     ext {
-        elasticSearchVersion = '6.4.3'
+        elasticSearchVersion = '6.8.17'
+        elasticSearchHLClientVersion = '6.5.0'
     }
 
     dependencies {
-        testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+        testCompile ("org.springframework.boot:spring-boot-starter-test:${springBootVersion}"){
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }
         compile  group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version: '2.10.3'
+        compile 'net.minidev:json-smart:2.4.7'
     }
 
     // Global constraints
@@ -120,11 +124,14 @@ allprojects {
         compile "com.fasterxml.jackson.core:jackson-databind:2.11.1"
         compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
         compile "org.hibernate:hibernate-core:${hibernateVersion}"
+        // Overriding transitive dependency commons-compress due to CVE failures
+        compile "org.apache.commons:commons-compress:1.21"
         testCompile "io.rest-assured:xml-path:${restAssuredVersion}"
         testCompile "io.rest-assured:json-path:${restAssuredVersion}"
         testCompile "org.codehaus.groovy:groovy:${groovyVersion}"
         testCompile "org.codehaus.groovy:groovy-xml:${groovyVersion}"
         testCompile "org.codehaus.groovy:groovy-json:${groovyVersion}"
+        testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
     }
 
     configurations.all {
@@ -134,6 +141,7 @@ allprojects {
         resolutionStrategy {
             dependencySubstitution {
                 substitute module('org.elasticsearch:elasticsearch') with module("org.elasticsearch:elasticsearch:${elasticSearchVersion}")
+                substitute module('org.elasticsearch.client:elasticsearch-rest-high-level-client') with module("org.elasticsearch.client:elasticsearch-rest-high-level-client:${elasticSearchHLClientVersion}")
             }
 
             eachDependency { details ->
@@ -203,7 +211,6 @@ subprojects { subproject ->
         compile "org.springframework.security:spring-security-config"
         compile "org.springframework.boot:spring-boot-starter-oauth2-client"
         compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
-        compile "com.nimbusds:nimbus-jose-jwt"
 
         implementation "io.github.openfeign:feign-httpclient:10.7.0"
 
@@ -213,9 +220,11 @@ subprojects { subproject ->
         compile group: 'com.zaxxer', name: 'HikariCP', version: '4.0.2'
         compile group: 'org.jooq', name: 'jool-java-8', version: '0.9.14'
         runtime "org.elasticsearch:elasticsearch:${elasticSearchVersion}"
-
+        runtime "org.elasticsearch.client:elasticsearch-rest-high-level-client:6.5.0"
         compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
         compile('org.springframework.boot:spring-boot-starter-cache')
+
+        compile "org.flywaydb:flyway-core:6.5.7"
 
         compile group: 'javax.inject', name: 'javax.inject', version: '1'
 
@@ -226,6 +235,7 @@ subprojects { subproject ->
 
         // CVE-2021-29425
         compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
+        implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.1'
 
         // To avoid compiler warnings about @API annotations in JUnit5 code.
         testCompileOnly 'org.apiguardian:apiguardian-api:1.0.0'
@@ -246,11 +256,11 @@ subprojects { subproject ->
         testCompile ('org.springframework.cloud:spring-cloud-contract-wiremock:2.2.1.RELEASE') {
             exclude group: 'commons-beanutils', module: 'commons-beanutils'
         }
-        testCompile ("org.mockito:mockito-core:2.24.0") {
+        testCompile ("org.mockito:mockito-core:3.6.0") {
             exclude group: 'org.hamcrest'
         }
         testCompile "org.mockito:mockito-all:1.10.19"
-        testCompile 'org.mockito:mockito-junit-jupiter:2.24.0'
+        testCompile 'org.mockito:mockito-junit-jupiter:3.6.0'
         testCompile 'com.github.npathai:hamcrest-optional:2.0.0'
         testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
         testCompile 'io.github.openfeign:feign-jackson:10.7.0'
@@ -260,10 +270,15 @@ subprojects { subproject ->
         testCompile "io.rest-assured:rest-assured:${restAssuredVersion}"
         testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: powermockVersion
         testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: powermockVersion
-        testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '6.14.2'
+        testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
+        testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.3.0'
+        // https://mvnrepository.com/artifact/junit/junit
+        compile group: 'junit', name: 'junit', version: '4.13.1'
+        testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.0'
+
     }
 
-    // from https://github.com/junit-team/junit5/issues/1024
+    // from https://github.com/junit-team/junit5/issues/1024'
     afterEvaluate {
         jacocoTestReport {
             reports {
@@ -447,18 +462,13 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
     ]
 }
 
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 cucumberReports {
     outputDir = file("${rootDir}/target/cucumber")
     reports = files("${rootDir}/target/cucumber.json")
-}
-
-task migratePostgresDatabase(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
-    baselineOnMigrate = true
-    baselineVersion = '0001'
-    outOfOrder = true
-    ignoreMissingMigrations = true
-    if (project.hasProperty("dburl")) {
-        url = "jdbc:postgresql://${dburl}"
-    }
-    locations = "filesystem:${projectDir}/repository/src/main/resources/db/migration".split(',')
 }
